TASK: Use HTTPS on hardcoded links

--- a/Resources/Private/Templates/NodeTypes/FrontpageFubaResults.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageFubaResults.html
@@ -10,7 +10,7 @@
                 <td>
                     <f:if condition="{homeAway} == 'home'"> <f:then> <f:render section="vflLogo" /></f:then> <f:else><f:render section="opponentLogo" arguments="{url: logo}" /> </f:else></f:if>
                 </td>
-                <td><img src="http://www.vfl-duttweiler.de/tore/torzu.gif" height="30" width="20" alt=":" /></td>
+                <td><img src="https://www.vfl-duttweiler.de/tore/torzu.gif" height="30" width="20" alt=":" /></td>
                 <td>
                     <f:if condition="{homeAway} == 'away'"> <f:then> <f:render section="vflLogo" /></f:then> <f:else><f:render section="opponentLogo" arguments="{url: logo}" /> </f:else></f:if>
                 </td>
@@ -21,9 +21,9 @@
                 </td>
             </tr>
             <tr>
-                <td><img src="http://www.vfl-duttweiler.de/tore/tor{scoreHome}.gif" height="30" width="23" alt="{scoreHome}" /></td>
-                <td><img src="http://www.vfl-duttweiler.de/tore/torzu.gif" height="30" width="20" alt=":" /></td>
-                <td><img src="http://www.vfl-duttweiler.de/tore/tor{scoreAway}.gif" height="30" width="23" alt="{scoreAway}" /></td>
+                <td><img src="https://www.vfl-duttweiler.de/tore/tor{scoreHome}.gif" height="30" width="23" alt="{scoreHome}" /></td>
+                <td><img src="https://www.vfl-duttweiler.de/tore/torzu.gif" height="30" width="20" alt=":" /></td>
+                <td><img src="https://www.vfl-duttweiler.de/tore/tor{scoreAway}.gif" height="30" width="23" alt="{scoreAway}" /></td>
                 <td></td>
             </tr>
         </table>
@@ -31,7 +31,7 @@
 </article>
 
 <f:section name="vflLogo">
-    <img src="http://www.vfl-duttweiler.de/logos/lo_vfl6.gif" height="100" width="100" />
+    <img src="https://www.vfl-duttweiler.de/logos/lo_vfl6.gif" height="100" width="100" />
 </f:section>
 <f:section name="opponentLogo">
     <img src="{url}" height="100" width="100" />
