--- a/Resources/Private/Templates/API/RssItem.html
+++ b/Resources/Private/Templates/API/RssItem.html
@@ -2,7 +2,7 @@
 <item>
   <title>{headline}</title>
   <description>{subheadline}</description>
-  <link>http://www.duttweiler.de{neos:uri.node(node: node, format: 'html')}</link>
+  <link>https://www.duttweiler.de{neos:uri.node(node: node, format: 'html')}</link>
   <guid isPermaLink="false">{uid}</guid>
   <pubDate>{date -> f:format.date(format: "D, d M Y H:i:s O" )}</pubDate>
 </item>
