--- a/Resources/Private/Templates/API/RssList.html
+++ b/Resources/Private/Templates/API/RssList.html
@@ -1,9 +1,9 @@
 {namespace fusion=Neos\Fusion\ViewHelpers}{namespace atom}<?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
-    <atom:link href="http://www.duttweiler.de/api/news.rss" rel="self" type="application/rss+xml" />
+    <atom:link href="https://www.duttweiler.de/api/news.rss" rel="self" type="application/rss+xml" />
     <title>Duttweiler.de Nachrichten</title>
-    <link>http://www.duttweiler.de</link>
+    <link>https://www.duttweiler.de</link>
     <description>Nachrichten aus Duttweiler</description>
     <language>de-de</language>
     <copyright>Gerhard Syring-Lingenfelder (www.g-sl.de)</copyright>
