feat: add customizable link to FrontpageTTResults

--- a/DistributionPackages/GSL.DuttweilerDe/Resources/Private/Templates/NodeTypes/FrontpageTTResults.html
+++ b/DistributionPackages/GSL.DuttweilerDe/Resources/Private/Templates/NodeTypes/FrontpageTTResults.html
@@ -7,5 +7,5 @@
         {source -> f:format.raw()}
         <div class="clearfix"></div>
     </div>
-    <a href="//www.vfl-duttweiler.de/vfl-tt.htm">mehr zu VfL Tischtennis</a>
+    {neos:contentElement.editable(property: 'link')}
 </article>
