fix(style): table cell padding
All table cells get a padding on all four sides.
Additionally, paragraphs inside of table cells explicitly get their margin
removed to account for the newly added padding of the cell.

--- a/DistributionPackages/GSL.DuttweilerDe/Resources/Public/Styles/Common.css
+++ b/DistributionPackages/GSL.DuttweilerDe/Resources/Public/Styles/Common.css
@@ -39,7 +39,11 @@ div.neos-contentcollection table th,
 div.neos-contentcollection table th,
 div.neos-contentcollection table td,
 div.neos-contentcollection table td
-{ padding: 0 10px; text-align: left; }
+{ padding: 10px; text-align: left; }
+
+/* Paragraphs in table cells shouldn't have margin, as the table cell itself has padding */
+div.neos-contentcollection table td p
+{ margin: 0; }
 
 div.neos-contentcollection table tr:nth-child(even),
 div.neos-contentcollection table tr:nth-child(even)
