fix(style): remove inline table margin
The new editor puts tables inside a figure.table tag, which get's a margin
by default styles. This gets now explicitly removed to avoid weird alignments.

--- a/DistributionPackages/GSL.DuttweilerDe/Resources/Public/Styles/Common.css
+++ b/DistributionPackages/GSL.DuttweilerDe/Resources/Public/Styles/Common.css
@@ -23,6 +23,9 @@ div.neos-nodetypes-image figure.typo3-neos-alignment-right { margin: 1em 5px; }
 
 /* Table styling */
 
+div.neos-contentcollection figure.table 
+{ margin-left: 0; margin-right: 0; }
+
 div.neos-contentcollection table,
 div.neos-contentcollection table
 { border-collapse: collapse; }
